<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context="com.lzf.ffcontacts.MainActivity">
    <!--说明文字-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/title_margin_top"
        android:text="@string/illustration"
        android:textSize="@dimen/title_text_size"/>
    <!--姓名-->
    <LinearLayout
        android:layout_width="@dimen/view_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="@dimen/images_width"
            android:layout_height="@dimen/images_height"
            android:src="@drawable/name"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name"
            />
        <EditText
            android:id="@+id/name"
            android:layout_width="@dimen/edit_width"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <!--电话-->
    <LinearLayout
        android:layout_width="@dimen/view_width"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_parent"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="@dimen/images_width"
            android:layout_height="@dimen/images_height"
            android:src="@drawable/phone"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/phone"/>
        <EditText
            android:id="@+id/phone"
            android:layout_width="@dimen/edit_width"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!--增删-->
    <LinearLayout
        android:layout_width="@dimen/view_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginRight="@dimen/little_button_margin"
            android:text="@string/add"
            android:textSize="@dimen/button_text_size"
            android:background="@drawable/button_corner_green_select"
            />
        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="@dimen/little_button_margin"
            android:text="@string/delete"
            android:textSize="@dimen/button_text_size"
            android:background="@drawable/button_corner_orange_select"
            />
    </LinearLayout>

    <!--导出-->
    <Button
        android:id="@+id/input"
        android:layout_width="@dimen/view_width"
        android:layout_height="@dimen/button_height"
        android:gravity="center"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/input"
        android:textSize="@dimen/button_text_size"
        android:background="@drawable/button_corner_green_select"
        />
    <!--导入-->
    <Button
        android:id="@+id/output"
        android:layout_width="@dimen/view_width"
        android:layout_height="@dimen/button_height"
        android:gravity="center"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        android:text="@string/output"
        android:textSize="@dimen/button_text_size"
        android:background="@drawable/button_corner_green_select"
        />
</LinearLayout>
